{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 545,
  "lineage": "1e2c8382-f443-a9ea-407b-31d172d64874",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-088cc8c4ee6f31e9a",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-52-35-40-136.us-west-2.compute.amazonaws.com",
            "public_ip": "52.35.40.136",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d081196e3df05f4d",
            "arn": "arn:aws:ec2:us-west-2:846613972722:instance/i-0391f94d886d96410",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0391f94d886d96410",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fcaf059d370167f0",
            "private_dns": "ip-10-0-2-85.us-west-2.compute.internal",
            "private_ip": "10.0.2.85",
            "public_ip": "52.36.35.53",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-044714ba42ce5ad6b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-09fdb7e818e3a98bf"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-074661bb148efb894",
            "tags": {
              "Name": "web-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09fdb7e818e3a98bf"
            ]
          },
          "dependencies": [
            "aws_security_group.web_server_sg",
            "aws_subnet.public_subnet_2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:846613972722:internet-gateway/igw-047e6f8d5207bfc71",
            "id": "igw-047e6f8d5207bfc71",
            "owner_id": "846613972722",
            "tags": {
              "Name": "Public_igw"
            },
            "vpc_id": "vpc-0279bc35d6e37bedf"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-088cc8c4ee6f31e9a",
            "id": "nat-0faf0817d9363ba56",
            "network_interface_id": "eni-0d4a9a9c880e0e150",
            "private_ip": "10.0.0.85",
            "public_ip": "52.35.40.136",
            "subnet_id": "subnet-09b1c8dcff6d1bcde",
            "tags": {
              "Name": "Public_subnet_NAT_Gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnet_1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:846613972722:route-table/rtb-020d33ec586f46f53",
            "id": "rtb-020d33ec586f46f53",
            "owner_id": "846613972722",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private Route Table"
            },
            "vpc_id": "vpc-0279bc35d6e37bedf"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:846613972722:route-table/rtb-021c262ccffdd0c7e",
            "id": "rtb-021c262ccffdd0c7e",
            "owner_id": "846613972722",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-047e6f8d5207bfc71",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "vpc_id": "vpc-0279bc35d6e37bedf"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062d16e2b5f02afa8",
            "route_table_id": "rtb-020d33ec586f46f53",
            "subnet_id": "subnet-0fddd58d91e7b5711"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064d945e2a4b4d3e0",
            "route_table_id": "rtb-021c262ccffdd0c7e",
            "subnet_id": "subnet-09b1c8dcff6d1bcde"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074f1c3fbc5c92873",
            "route_table_id": "rtb-021c262ccffdd0c7e",
            "subnet_id": "subnet-074661bb148efb894"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_server_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:846613972722:security-group/sg-09fdb7e818e3a98bf",
            "description": "Allow HTTP and SSH inbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09fdb7e818e3a98bf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.0.0.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.0.0.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-server-security",
            "name_prefix": "",
            "owner_id": "846613972722",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-0279bc35d6e37bedf"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:846613972722:subnet/subnet-07613bb7e0f7bc229",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-07613bb7e0f7bc229",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "846613972722",
            "tags": {
              "Name": "Private_subnet1"
            },
            "tags_all": {
              "Name": "Private_subnet1"
            },
            "vpc_id": "vpc-0279bc35d6e37bedf"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:846613972722:subnet/subnet-0fddd58d91e7b5711",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0fddd58d91e7b5711",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "846613972722",
            "tags": {
              "Name": "Private_subnet2"
            },
            "tags_all": {
              "Name": "Private_subnet2"
            },
            "vpc_id": "vpc-0279bc35d6e37bedf"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:846613972722:subnet/subnet-09b1c8dcff6d1bcde",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-09b1c8dcff6d1bcde",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "846613972722",
            "tags": {
              "Name": "Public_subnet1"
            },
            "tags_all": {
              "Name": "Public_subnet1"
            },
            "vpc_id": "vpc-0279bc35d6e37bedf"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:846613972722:subnet/subnet-074661bb148efb894",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-074661bb148efb894",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "846613972722",
            "tags": {
              "Name": "Public_subnet2"
            },
            "tags_all": {
              "Name": "Public_subnet2"
            },
            "vpc_id": "vpc-0279bc35d6e37bedf"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:846613972722:vpc/vpc-0279bc35d6e37bedf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-098646a626b23e746",
            "default_route_table_id": "rtb-0d30b54c194eacdbc",
            "default_security_group_id": "sg-0597408c3a2cb17ba",
            "dhcp_options_id": "dopt-01ac43b76338beff7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0279bc35d6e37bedf",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d30b54c194eacdbc",
            "owner_id": "846613972722",
            "tags": {
              "Name": "roei_vpc"
            },
            "tags_all": {
              "Name": "roei_vpc"
            }
          }
        }
      ]
    }
  ]
}